change gradient text font

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../css/home.css">
 
       <!-- Fonts -->
+      <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap" rel="stylesheet"> 
       <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap" rel="stylesheet"> 
      
 </head>
@@ -25,15 +26,15 @@
 
 
         <div class="container-fluid" id="fundo" style="height: 460px;">
-            <div id="row" class="row justify-content-center" style="width: 60rem;">
-                <div class="col" style="margin-right: 10em;">
+            <div id="row" class="row">
+                <div class="col">
                     <div class="container mt-4  text-center">
                         <div class="container">
-                            <img src="src/img/saas1.png" style="width: 55%" styleclass="img" alt="Logo"></div>
-                        <div class="container rounded mt-4" style="width: 50%; background-color: #FFDFD4;">
+                            <img src="src/img/saas1.png" style="width: 70%" styleclass="img" alt="Logo"></div>
+                        <div class="container rounded mt-4" style="width: 60%; background-color: #FFDFD4;">
                             <p class="font-weight-bold">Planos a partir de:</p>
                         </div>
-                        <div class="container rounded" style="width: 50%; background-color: #FFDFD4;">
+                        <div class="container rounded" style="width: 60%; background-color: #FFDFD4;">
                             <p class="font-weight-bold">R$2,99/mês*</p>
                         </div>
                     </div>
@@ -41,10 +42,11 @@
                 </div>
 
                 <div class="col">
-                    <div class="container mt-4" style="height: 70%;">
+                    <div class="container mt-4">
 
                         <div class="text-center">
-                            <h1 class="mb-3 gradient-text">Hospedagem de Servidores Rápida e Segura</h1>
+                            <h1 class="mb-3 gradient-text" style="font-family: 'Josefin Sans', sans-serif;">
+                                Hospedagem de Servidores Rápida e Segura</h1>
                             <p class="lead mb-4 text-font">Vendemos servidores baratos e distribuímos máquinas
                                 para
                                 realizações dos TCCs gratuitamente</p>
