--- a/pages/cloud.html
+++ b/pages/cloud.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../css/home.css">
 
       <!-- Fonts -->
+      <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap" rel="stylesheet"> 
       <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap" rel="stylesheet"> 
      
 </head>
@@ -30,7 +31,8 @@
                 <div class="col">
                     <div class="container mt-4">
                         <div class="text-center">
-                            <h1 class="mb-3 gradient-text"><strong>Cloud (Nuvem)</strong></h1>
+                            <h1 class="mb-3 gradient-text" style="font-family: 'Josefin Sans', sans-serif;">
+                                Cloud (Nuvem)</strong></h1>
                             <p class="lead mb-4 text-font">Cloud(nuvem) para armazenar seus arquivos onlinee com
                                 segurança.</p>
                             <p class="lead text-font">Confira nosso melhores planos a abaixo:</p>
