--- a/pages/hosting.html
+++ b/pages/hosting.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../css/home.css">
 
       <!-- Fonts -->
+      <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap" rel="stylesheet"> 
       <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap" rel="stylesheet"> 
      
 </head>
@@ -30,7 +31,8 @@
                 <div class="col">
                     <div class="container mt-4">
                         <div class="text-center">
-                            <h1 class="mb-3 gradient-text"><strong>Hospedagem</strong></h1>
+                            <h1 class="mb-3 gradient-text" style="font-family: 'Josefin Sans', sans-serif;">
+                                <strong>Hospedagem</strong></h1>
                             <p class="lead mb-4 text-font">Hospedagem de sites por 24 horas aos 7 dias da semana.</p>
                             <p class="lead text-font">Confira nosso melhore splanos a abaixo:</p>
                             <button type="button" class="btn gradientbutton" style="width: 15rem;">
