--- a/pages/vps.html
+++ b/pages/vps.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../css/home.css">
 
      <!-- Fonts -->
+     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap" rel="stylesheet"> 
      <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap" rel="stylesheet"> 
      
 </head>
@@ -30,7 +31,7 @@
                 <div class="col">
                     <div class="container mt-4">
                         <div class="text-center">
-                            <h1 class="mb-3 gradient-text"><strong>
+                            <h1 class="mb-3 gradient-text" style="font-family: 'Josefin Sans', sans-serif;">
                                     <p>VPS</p>
                                     (Servidor Virtual Privado)
                                 </strong></h1>
