--- a/common/header.html
+++ b/common/header.html
@@ -25,17 +25,17 @@
 
                 <ul class="navbar-nav">
 
-                    <li class="nav-item">
-                        <a class="nav-link text-font" style="font-size: 15pt;" href="/pages/vps.html">VPS</a>
+                    <li class="nav-item text-center">
+                        <a class="nav-link" style="font-size: 18pt; width: 5rem; color: #FFDFD4;" href="/pages/vps.html">VPS</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-font" style="font-size: 15pt;" href="/pages/cloud.html">Cloud</a>
+                    <li class="nav-item text-center">
+                        <a class="nav-link" style="font-size: 18pt; width: 5rem; color: #FFDFD4;" href="/pages/cloud.html">Cloud</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-font" style="font-size: 15pt;" href="/pages/hosting.html">Hospedagem</a>
+                    <li class="nav-item text-center">
+                        <a class="nav-link" style="font-size: 18pt; width: 10rem; color: #FFDFD4;" href="/pages/hosting.html">Hospedagem</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-font" style="font-size: 15pt;" href="/auth/login.html">Entrar</a>
+                    <li class="nav-item text-center">
+                        <a class="nav-link" style="font-size: 18pt; width: 5rem; color: #FFDFD4;" href="/auth/login.html">Entrar</a>
                     </li>
 
                 </ul>
