add focus effect price container

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
             <!-- Planos -->
             <div class="row m-4">
-                <div class="col mx-4" id="price-plans-background">
+                <div class="col mx-4 price-plans-background">
                     <div col>
                         <!-- Titulo Plano -->
                         <div class="container my-3" id="price-plan-title">
@@ -100,7 +100,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col mx-4" id="price-plans-background">
+                <div class="col mx-4 price-plans-background">
                     <div col>
                         <!-- Titulo Plano -->
                         <div class="container my-3" id="price-plan-title">
@@ -118,7 +118,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col mx-4" id="price-plans-background">
+                <div class="col mx-4 price-plans-background">
                     <div col>
                         <!-- Titulo Plano -->
                         <div class="container my-3" id="price-plan-title">
@@ -136,7 +136,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col mx-4" id="price-plans-background">
+                <div class="col mx-4 price-plans-background">
                     <div col>
                         <!-- Titulo Plano -->
                         <div class="container my-3" id="price-plan-title">
