--- a/pages/cloud.html
+++ b/pages/cloud.html
@@ -84,7 +84,7 @@
             <!-- Planos Cloud -->
             <div class="row m-4">
                 <!-- Plano 1 -->
-                <div class="col mx-4" id="price-plans-background">
+                <div class="col mx-4 price-plans-background">
                     <div col>
                         <!-- Titulo Plano -->
                         <div class="container my-3" id="price-plan-title">
@@ -109,7 +109,7 @@
                     </div>
                 </div>
                 <!-- Plano 2 -->
-                <div class="col mx-4" id="price-plans-background">
+                <div class="col mx-4 price-plans-background">
                     <div col>
                         <!-- Titulo Plano -->
                         <div class="container my-3" id="price-plan-title">
@@ -135,7 +135,7 @@
                     </div>
                 </div>
                 <!-- Plano 3 -->
-                <div class="col mx-4" id="price-plans-background">
+                <div class="col mx-4 price-plans-background">
                     <div col>
                         <!-- Titulo Plano -->
                         <div class="container my-3" id="price-plan-title">
@@ -161,7 +161,7 @@
                     </div>
                 </div>
                 <!-- Plano 4 -->
-                <div class="col mx-4" id="price-plans-background">
+                <div class="col mx-4 price-plans-background">
                     <div col>
                         <!-- Titulo Plano -->
                         <div class="container my-3" id="price-plan-title">
