--- a/pages/vps.html
+++ b/pages/vps.html
@@ -85,7 +85,7 @@
             <!-- Planos VPS -->
             <div class="row m-4">
                 <!-- Plano 1 -->
-                <div class="col mx-4" id="price-plans-background">
+                <div class="col mx-4 price-plans-background">
                     <div col>
                         <!-- Titulo Plano -->
                         <div class="container my-3" id="price-plan-title">
@@ -107,7 +107,7 @@
                     </div>
                 </div>
                 <!-- Plano 2 -->
-                <div class="col mx-4" id="price-plans-background">
+                <div class="col mx-4 price-plans-background">
                     <div col>
                         <!-- Titulo Plano -->
                         <div class="container my-3" id="price-plan-title">
@@ -129,7 +129,7 @@
                     </div>
                 </div>
                 <!-- Plano 3 -->
-                <div class="col mx-4" id="price-plans-background">
+                <div class="col mx-4 price-plans-background">
                     <div col>
                         <!-- Titulo Plano -->
                         <div class="container my-3" id="price-plan-title">
@@ -151,7 +151,7 @@
                     </div>
                 </div>
                 <!-- Plano 4 -->
-                <div class="col mx-4" id="price-plans-background">
+                <div class="col mx-4 price-plans-background">
                     <div col>
                         <!-- Titulo Plano -->
                         <div class="container my-3" id="price-plan-title">
