--- a/pages/hosting.html
+++ b/pages/hosting.html
@@ -83,7 +83,7 @@
             <!-- Planos Hospedagem -->
             <div class="row m-4">
                 <!-- Plano 1 -->
-                <div class="col mx-4" id="price-plans-background">
+                <div class="col mx-4 price-plans-background">
                     <div col>
                         <!-- Titulo Plano -->
                         <div class="container my-3" id="price-plan-title">
@@ -107,7 +107,7 @@
                     </div>
                 </div>
                 <!-- Plano 2 -->
-                <div class="col mx-4" id="price-plans-background">
+                <div class="col mx-4 price-plans-background">
                     <div col>
                         <!-- Titulo Plano -->
                         <div class="container my-3" id="price-plan-title">
@@ -131,7 +131,7 @@
                     </div>
                 </div>
                 <!-- Plano 3 -->
-                <div class="col mx-4" id="price-plans-background">
+                <div class="col mx-4 price-plans-background">
                     <div col>
                         <!-- Titulo Plano -->
                         <div class="container my-3" id="price-plan-title">
@@ -155,7 +155,7 @@
                     </div>
                 </div>
                 <!-- Plano 4 -->
-                <div class="col mx-4" id="price-plans-background">
+                <div class="col mx-4 price-plans-background">
                     <div col>
                         <!-- Titulo Plano -->
                         <div class="container my-3" id="price-plan-title">
