add information price and resize container auth

--- a/auth/profile.html
+++ b/auth/profile.html
@@ -36,7 +36,7 @@
                 <!-- Nome -->
                 <div class="row my-4">
                     <div class="col-2">
-                        <p class="my-2 text-center font-weight-bold" style="font-size: 15pt">Nome</p>
+                        <p class="my-2 text-center text-font font-weight-bold" style="font-size: 15pt">Nome</p>
                     </div>
                     <div class="col">
                         <div class="container login-campo">
@@ -48,7 +48,7 @@
                 <!-- Email -->
                 <div class="row my-4">
                     <div class="col-2">
-                        <p class="my-2 text-center font-weight-bold" style="font-size: 15pt">Email</p>
+                        <p class="my-2 text-center text-font font-weight-bold" style="font-size: 15pt">Email</p>
                     </div>
                     <div class="col d-flex justify-content-center">
                         <div class="container login-campo">
@@ -61,7 +61,7 @@
                 <!-- Senha -->
                 <div class="row my-4">
                     <div class="col-2">
-                        <p class="my-2 text-center font-weight-bold" style="font-size: 15pt">Senha</p>
+                        <p class="my-2 text-center text-font font-weight-bold" style="font-size: 15pt">Senha</p>
                     </div>
                     <div class="col d-flex justify-content-center">
                         <div class="container login-campo">
@@ -76,7 +76,7 @@
                 <!-- CPF -->
                 <div class="row my-4">
                     <div class="col-2">
-                        <p class="my-2 text-center font-weight-bold" style="font-size: 15pt";>CPF</p>
+                        <p class="my-2 text-center text-font font-weight-bold" style="font-size: 15pt";>CPF</p>
                     </div>
                     <div class="col d-flex justify-content-center">
                         <div class="container login-campo">
@@ -89,7 +89,7 @@
                 <!-- Data de Nascimento -->
                 <div class="row my-4 justify-content-between">
                     <div class="col">
-                        <p class="my-2 font-weight-bold text-left nowrap" style="font-size: 15pt">Data de nascimento</p>
+                        <p class="my-2 font-weight-bold text-font text-left nowrap" style="font-size: 15pt">Data de nascimento</p>
                     </div>
                     <div class="col">
 
