--- a/pages/cloud.html
+++ b/pages/cloud.html
@@ -92,7 +92,9 @@
                         </div>
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
-                            <h5 class="text-font text-center p-3"><strong>R$ 5,99</strong></h5>
+                            <h5 class="text-font text-center p-3"><strong>R$ 5,99
+                                <small class="text-font quicksand">/mês</small>
+                            </strong></h5>
                         </div>
                         <!-- Descrição -->
                         <div class="p-3 quicksand" id="price-desc-background">
@@ -117,7 +119,9 @@
                         </div>
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
-                            <h5 class="text-font text-center p-3"><strong>R$ 9,99</strong></h5>
+                            <h5 class="text-font text-center p-3"><strong>R$ 9,99
+                                <small class="text-font quicksand">/mês</small>
+                            </strong></h5>
                         </div>
                         <!-- Descrição -->
                         <div class="p-3 quicksand" id="price-desc-background">
@@ -143,7 +147,9 @@
                         </div>
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
-                            <h5 class="text-font text-center p-3"><strong>R$ 14,99</strong></h5>
+                            <h5 class="text-font text-center p-3"><strong>R$ 14,99
+                                <small class="text-font quicksand">/mês</small>
+                            </strong></h5>
                         </div>
                         <!-- Descrição -->
                         <div class="p-3 quicksand" id="price-desc-background">
@@ -169,7 +175,9 @@
                         </div>
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
-                            <h5 class="text-font text-center p-3"><strong>R$ 19,99</strong></h5>
+                            <h5 class="text-font text-center p-3"><strong>R$ 19,99
+                                <small class="text-font quicksand">/mês</small>
+                            </strong></h5>
                         </div>
                         <!-- Descrição -->
                         <div class="p-3 quicksand" id="price-desc-background">
