--- a/pages/hosting.html
+++ b/pages/hosting.html
@@ -91,7 +91,9 @@
                         </div>
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
-                            <h5 class="text-font text-center p-3"><strong>R$ 19,99</strong></h5>
+                            <h5 class="text-font text-center p-3"><strong>R$ 19,99
+                                <small class="text-font quicksand">/mês</small>
+                            </strong></h5>
                         </div>
                         <!-- Descrição -->
                         <div class="p-3 quicksand" id="price-desc-background">
@@ -115,7 +117,9 @@
                         </div>
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
-                            <h5 class="text-font text-center p-3"><strong>R$ 6,99</strong></h5>
+                            <h5 class="text-font text-center p-3"><strong>R$ 6,99
+                                <small class="text-font quicksand">/mês</small>
+                            </strong></h5>
                         </div>
                         <!-- Descrição -->
                         <div class="p-3 quicksand" id="price-desc-background">
@@ -139,7 +143,9 @@
                         </div>
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
-                            <h5 class="text-font text-center p-3"><strong>R$ 9,99</strong></h5>
+                            <h5 class="text-font text-center p-3"><strong>R$ 9,99
+                                <small class="text-font quicksand">/mês</small>
+                            </strong></h5>
                         </div>
                         <!-- Descrição -->
                         <div class="p-3 quicksand" id="price-desc-background">
@@ -163,7 +169,9 @@
                         </div>
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
-                            <h5 class="text-font text-center p-3"><strong>R$ 14,99</strong></h5>
+                            <h5 class="text-font text-center p-3"><strong>R$ 14,99
+                                <small class="text-font quicksand">/mês</small>
+                            </strong></h5>
                         </div>
                         <!-- Descrição -->
                         <div class="p-3 quicksand" id="price-desc-background">
