--- a/pages/vps.html
+++ b/pages/vps.html
@@ -93,7 +93,9 @@
                         </div>
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
-                            <h5 class="text-font text-center p-3"><strong>R$ 19,99</strong></h5>
+                            <h5 class="text-font text-center p-3"><strong>R$ 19,99
+                                <small class="text-font quicksand">/mês</small>
+                            </strong></h5>
                         </div>
                         <!-- Descrição -->
                         <div class="p-3 quicksand" id="price-desc-background">
@@ -115,7 +117,9 @@
                         </div>
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
-                            <h5 class="text-font text-center p-3"><strong>R$ 6,99</strong></h5>
+                            <h5 class="text-font text-center p-3"><strong>R$ 6,99
+                                <small class="text-font quicksand">/mês</small>
+                            </strong></h5>
                         </div>
                         <!-- Descrição -->
                         <div class="p-3 quicksand" id="price-desc-background">
@@ -137,7 +141,9 @@
                         </div>
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
-                            <h5 class="text-font text-center p-3"><strong>R$ 9,99</strong></h5>
+                            <h5 class="text-font text-center p-3"><strong>R$ 9,99
+                                <small class="text-font quicksand">/mês</small>
+                            </strong></h5>
                         </div>
                         <!-- Descrição -->
                         <div class="p-3 quicksand" id="price-desc-background">
@@ -152,14 +158,15 @@
                 </div>
                 <!-- Plano 4 -->
                 <div class="col mx-4 price-plans-background">
-                    <div col>
                         <!-- Titulo Plano -->
                         <div class="container my-3" id="price-plan-title">
                             <h5 class="text-center p-2"><strong>Plano 40.0</strong></h5>
                         </div>
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
-                            <h5 class="text-font text-center p-3"><strong>R$ 14,99</strong></h5>
+                            <h5 class="text-font text-center p-3"><strong>R$ 14,99
+                                <small class="text-font quicksand">/mês</small>
+                            </strong></h5>
                         </div>
                         <!-- Descrição -->
                         <div class="p-3 quicksand" id="price-desc-background">
@@ -170,7 +177,6 @@
                         <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
                             <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
                         </div>
-                    </div>
                 </div>
 
             </div>
@@ -181,18 +187,20 @@
             <!-- Planos VPS Free -->
             <div class="row m-4 mx-auto" style="width:60rem;">
                 <!-- Plano 1 -->
-                <div class="col ml-5" id="price-plans-background">
-
+                <div class="col price-plans-background">
                     <!-- Titulo Plano -->
                     <div class="container my-3" id="price-plan-title">
                         <h5 class="text-center p-2"><strong>Plano Free</strong></h5>
                     </div>
                     <!-- Preço  -->
                     <div class="container my-3" id="price-plan-price">
-                        <h5 class="text-font text-center p-3"><strong>R$ 19,99</strong></h5>
+                        <h5 class="text-font text-center p-3"><strong>
+                            R$ 19,99
+                            <small class="text-font quicksand">/mês</small>
+                        </strong></h5>
                     </div>
                     <!-- Descrição -->
-                    <div class="p-3" id="price-desc-background">
+                    <div class="p-3 quicksand" id="price-desc-background">
                         <p class="my-2">Para Windows e Linux;</p>
                         <p class="my-2">40 GB de armazenamento;</p>
                         <p class="my-2">2 vCPU de processamento.</p>
@@ -206,7 +214,7 @@
                 </div>
 
                 <!-- Plano 2 -->
-                <div class="col mr-5" id="price-plans-background">
+                <div class="col price-plans-background">
 
                     <!-- Titulo Plano -->
                     <div class="container my-3" id="price-plan-title">
@@ -214,10 +222,12 @@
                     </div>
                     <!-- Preço  -->
                     <div class="container my-3" id="price-plan-price">
-                        <h5 class="text-font text-center p-3"><strong>R$ 6,99</strong></h5>
+                        <h5 class="text-font text-center p-3"><strong>R$ 6,99
+                            <small class="text-font quicksand">/mês</small>
+                        </strong></h5>
                     </div>
                     <!-- Descrição -->
-                    <div class="p-3" id="price-desc-background">
+                    <div class="p-3 quicksand" id="price-desc-background">
                         <p class="my-2">Para Windows e Linux;</p>
                         <p class="my-2">80 GB de armazenamento;</p>
                         <p class="my-2">3 vCPU de processamento.</p>
