--- a/auth/login.html
+++ b/auth/login.html
@@ -25,29 +25,29 @@
 
 
     <div class="container-fluid py-5" id="background">
-        <div class="container py-5" id="login-container" style="width: 50em;">
+        <div class="container py-5" id="login-container">
             <div class="col px-5 text-center">
 
                 <!-- Email -->
                 <div class="row my-4">
-                    <div class="col col-lg-1 ">
-                        <p class="my-2 text-center font-weight-bold">Email</p>
+                    <div class="col-2">
+                        <p class="my-2 text-center text-font font-weight-bold" style="font-size: 15pt">Email</p>
                     </div>
-                    <div class="col d-flex justify-content-center">
+                    <div class="col">
                         <div class="container login-campo">
-                            <input type="email" class="form-control" style="border:none">
+                            <input type="email" class="form-control" style="border-width: 0px; height: 33px;">
                         </div>
                     </div>
                 </div>
 
                 <!-- Senha -->
                 <div class="row my-4">
-                    <div class="col col-lg-1 ">
-                        <p class="my-2 text-center font-weight-bold">Senha</p>
+                    <div class="col-2">
+                        <p class="my-2 text-center text-font font-weight-bold" style="font-size: 15pt">Senha</p>
                     </div>
-                    <div class="col d-flex justify-content-center">
+                    <div class="col">
                         <div class="container login-campo">
-                            <input type="password" class="form-control" style="border:none">
+                            <input type="password" class="form-control" style="border-width: 0px; height: 33px;">
                         </div>
                     </div>
                 </div>
@@ -55,7 +55,7 @@
                     <h5 class="text-font my-auto p"><strong>Entrar</strong></h5>
                 </button>
 
-                <p class="mt-4">Não possui uma conta?</p>
+                <p class="mt-4 text-font">Não possui uma conta?</p>
                 <a href="register.html">
                     <p class="text-font">Clique aqui para cadastrar</p>
                 </a>
